feat(api): add update repository endpoint and more test
